# botaniclock

./: .gitignore  LICENSE  README.md  pom.xml
ESP IDF C Code/: README.md  partitions.csv
ESP IDF C Code/main/: CMakeLists.txt  main.c
ESP IDF C Code/main/button/: button.c
ESP IDF C Code/main/led/: led.c
ESP IDF C Code/main/nvs_parameter/: nvs_parameter.c  nvs_parameter.h
ESP IDF C Code/main/registration_mode/: registration_mode.c  registration_mode.h
ESP IDF C Code/main/router_mode/: router_mode.c  router_mode.h
ESP IDF C Code/main/server/: server.h
ESP IDF C Code/main/update_mode/: update_mode.h
ESP IDF C Code/main/wifi/: wifi.c
ESP IDF C Code/site/register/: script.js
ESP IDF C Code/site/router/: script.js
ESP32 C Code/: README.md
ESP32 C Code (ESP-IDF)/: .gitignore  README.md
ESP32 C Code (ESP-IDF)/main/client/: client.c  client.h
ESP32 C Code (ESP-IDF)/main/led/: led.h
ESP32 C Code (ESP-IDF)/main/server/: server.c
ESP32 C Code (ESP-IDF)/main/update_mode/: update_mode.c
ESP32 C Code (ESP-IDF)/main/wifi/: wifi.h
ESP32 C Code/main/button/: button.h
ESP32 C Code/main/client/: client.c
ESP32 C Code/main/led/: led.c
ESP32 C Code/main/registration_mode/: registration_mode.c
ESP32 C Code/main/router_mode/: router_mode.c
ESP32 C Code/main/update_mode/: update_mode.c
ESP32 C Code/site/register/: index.html  style.css
ESP32 C Code/site/router/: index.html  style.css
Java Spring/: README.md
Java Spring/planttracker/src/main/resources/: application.properties
src/main/resources/static/: cookie.js  index.html  style.css
(+60 files in other folders)
